<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="10dp"
    android:clipToPadding="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecommendationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/recommendationLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/performance_recommendations"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/slidesTimeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/slide_time"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/slidesTimeRecommendation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/slides_time_recommendation"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/wordFrequencyLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/word_frequency"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/wordFrequencyRecommendation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/word_frequency_recommendation"
            android:textSize="15sp" />
        <TextView
            android:visibility="gone"
            android:id="@+id/slidesFrequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/slides_frequency"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="15sp" />

        <TextView
                        android:visibility="gone"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/slides_frequency_recommendation"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/scumWordsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/scum_words_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/scumWordsRecommendation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/scum_words_recommendation"
            android:textSize="15sp" />

        <Button
            android:id="@+id/backToStatistics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/back_to_statistics"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="15sp" />

        <Button
            android:id="@+id/toHomeScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/to_home_screen"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="15sp" />

    </LinearLayout>
</ScrollView>