<resources>
    <string name="activity_training_history_name">История тренировок</string>
    <string name="activity_training_statistics_name">Статистика тренировки</string>
    <string name="activity_training_name">Тренировка</string>
    <string name="time_left">осталось времени</string>
    <string name="next">Следующий</string>
    <string name="stop">Закончить</string>
    <string name="activity_start_page_name">Начальная страница</string>
    <string name="activity_create_presentation_name">Добавление презентации</string>
    <string name="activity_edit_presentation_name">Добавление новой презентации</string>
    <string name="time_limit">Ограничение времени на доклад (минут)</string>
    <string name="notifications">Уведомления</string>
    <string name="presentation_date">Дата доклада</string>
...
    <string name="recommendation_speed_increase_info">существенно выше рекомендуемого значения. Рекомендуется увеличить время отображения указанных слайдов.</string>
    <string name="recommendation_speed_decrease_info">существенно ниже рекомендуемого значение. Рекомендуется уменьшить время отображения указанных слайдов.</string>


    <string name="performance_recommendations">Рекомендации к выступлению</string>
    <string name="slide_time">Время слайдов</string>
    <string name="slides_time_recommendation">Рекомендации по времени слайдов - заглушка"</string>
    <string name="slides_frequency">Частота слайдов</string>
    <string name="slides_frequency_recommendation">Рекомендации по частоте слов - заглушка</string>
    <string name="scum_words_label">Слова паразиты</string>
    <string name="scum_words_recommendation">Рекомендации по словам-паразитам - заглушка</string>
    <string name="back_to_statistics">Назад к статистике</string>
    <string name="to_home_screen">На главную</string>

    <string name="average_speed">Средняя скорость: </string>
    <string name="best_slide">Лучший слайд: </string>
    <string name="worst_slide">Худший слайд: </string>
...
    <string name="pref_header_general">Основные</string>

    <string name="pref_title_enable_statistics">Включить анализ статистики</string>
    <string name="pref_description_enable_statistics">Отображение графиков после выступления
    </string>
    <string name="pref_title_enable_deb_pres">Включить тестовые презентации</string>
    <string name="deb_speech_audio_key">deb_speech_audio</string>
    <string name="speed_key">speed_key</string>
    <string name="pref_title_enable_deb_speech_audio">Включить тестовую звуковую дорожку</string>
    <string name="deb_pres">Отладочная презентация</string>
    <string name="deb_pres_name">making_presentation.pdf</string>
    <string name="first_debug_presentation_name">making_first_presentation</string>
    <string name="second_debug_presentation_name">making_second_presentation</string>
    <string name="set_number_into_NP">Set the passed number into the NumberPicker</string>
    <string name="first_debug_time">01 min: 00 sec</string>
    <string name="second_debug_time">02 min: 00 sec</string>
    <string name="edit">"Редактировать"</string>

    <string name="making_presentation">making_presentation</string>

    <string name="pref_title_display_name">Имя пользователя</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Желательный темп речи</string>

...
