<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/edit_presentation_activity_root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".EditPresentationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <FrameLayout
            android:layout_weight="1.05"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_marginTop="10dp"
                android:id="@+id/pdf_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:scaleType="fitCenter" />

            <Button
                android:id="@+id/change_pres"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="right|top"
                android:layout_margin="10dp"
                android:background="@color/black_15_alpha"
                android:foreground="@drawable/card_foreground"
                android:paddingHorizontal="4dp"
                android:text="@string/presentation_file_replacement"
                android:textColor="@android:color/white"
                android:textSize="12dp"
                android:textStyle="bold" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.95"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:textColorHint="@color/black_35_alpha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp">


                <EditText
                    android:id="@+id/presentationName"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:hint="@string/enter_presentation_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:minHeight="40dp"
                    android:maxLength="@integer/max_possible_pres_name_length"
                    android:textAlignment="center" />


            </android.support.design.widget.TextInputLayout>

            <FrameLayout
                android:layout_marginTop="2dp"
                android:layout_weight="1.05"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:clickable="true"
                    android:focusable="true"
                    android:textColor="@color/black_35_alpha"
                    android:textSize="12dp"
                    android:text="@string/time_limit"
                    android:layout_gravity="center|top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_marginTop="12dp"
                    android:descendantFocusability="blocksDescendants"
                    android:clickable="false"
                    android:focusable="false"
                    android:weightSum="1"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <NumberPicker
                        android:focusable="false"
                        android:clickable="false"
                        android:id="@+id/numberPicker1"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.95">

                <TextView
                    android:textColor="@color/black_35_alpha"
                    android:textSize="12sp"
                    android:text="@string/presentation_date"
                    android:layout_gravity="center|top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <DatePicker
                    android:id="@+id/datePicker"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner">
                </DatePicker>
            </FrameLayout>

            <CheckBox
                android:id="@+id/notifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/notifications"
                android:layout_marginTop="-16dp"
                android:layout_marginBottom="3dp"/>

            <android.support.v7.widget.CardView
                android:id="@+id/addPresentation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:foreground="@drawable/card_foreground"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="10dp"
                    android:text="@string/save"
                    android:textColor="@android:color/white"
                    android:textSize="17dp"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>