<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/section_img"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:alpha="0.50"
            android:background="@drawable/training"
            android:scaleType="fitCenter"
            android:layout_marginBottom="50dp"/>


    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/section_label"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:gravity="center"/>


    </LinearLayout>

</FrameLayout>
